--- a/styles/Table.module.css
+++ b/styles/Table.module.css
@@ -14,7 +14,7 @@
   position: sticky;
   table-layout: fixed;
   width: 100%;
-  max-height: 80%;
+  max-height: 500px;
 }
 
 /* ---------- TABLE HEADER BEGINS --------- */
